dark mode minor fixes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,7 +34,7 @@ body {
       }
 
       & a {
-          @apply text-sm no-underline font-normal text-neutral-600 py-3 flex;
+          @apply text-sm no-underline font-normal text-neutral-600 dark:text-white py-3 flex;
 
           & * {
               @apply font-normal text-sm
